2002-07-09  Gary Thomas  <gary@chez-thomas.org>
2002-07-09  Grant Edwards <grante@visi.com>

	* src/net/udp.c: 
	* src/net/net_io.c: 
	* src/net/ip.c: 
	* src/net/bootp.c: 
	* src/net/arp.c: 
	* include/net/net.h: 
	* include/net/bootp.h: 
	* cdl/redboot.cdl: Add basic support for non-local networking
	using a single gateway.  Based on contribution from Grant Edwards.

2002-07-01  Gary Thomas  <gary@chez-thomas.org>

	* src/net/tftp_client.c: 
	* src/net/http_client.c: 
	* src/fs/disk.c: 
	* src/xyzModem.h: 
	* src/xyzModem.c: 
	* src/load.c: 
	* include/net/tftp_support.h: 
	* include/net/http.h: 
	* include/redboot.h: 
	* cdl/redboot.cdl: Make 'load' command stream I/O table driven.

2002-05-31  Jesper Skov  <jskov@redhat.com>

	* doc/redboot_installing.sgml: Updated the remaining installation
	instructions (well, the top mode details anyway).

2002-05-29  Jesper Skov  <jskov@redhat.com>

	* doc/redboot_cmds.sgml: Changed format of fis commands.

	* doc/redboot_installing.sgml: Updated installation instructions
	for all targets up to PowerPC.

2002-05-28  Gary Thomas  <gthomas@redhat.com>

	* src/load.c (load_elf_image): Improve loading of ELF files with
	multiple physical segments.

2002-05-27  Jesper Skov  <jskov@redhat.com>

	* doc/redboot_rebuilding.sgml: Added some guimenu tags.

	* doc/redboot_installing.sgml: Updating more board instructions.
	More updates. Changing most programlisting keywords to screen.
	Converted remaining rebuild instructions. More mode descriptions
	updated. iPAQ converted as well.

2002-05-24  Gary Thomas  <gthomas@redhat.com>

	* src/load.c (load_elf_image): Improve loading where ELF image
	actually overlaps headers [old COFF style files].

2002-05-24  Jesper Skov  <jskov@redhat.com>

	* doc/redboot_installing.sgml: Updated another 3 boards'
	instructions.

	* doc/redboot.sgml: Changes due to comments from Jifl.
	* doc/redboot_rebuilding.sgml: Same.
	
	* doc/redboot.sgml: Fix wording.
