@@ -1,3 +1,10 @@
+2002-07-11  Gary Thomas  <gary@chez-thomas.org>
+
+	* src/io.c (mon_read_char_with_timeout): Ensure interrupts are
+	disabled on all I/O channels, except for the current console.
+	This is done when selecting a console, as this process causes
+	the interrupt state to be inherited from the current console.
+
 2002-07-09  Gary Thomas  <gary@chez-thomas.org>
 2002-07-09  Grant Edwards <grante@visi.com>
 
